remove background movement and fix jumpy program landing

--- a/_src/sass/_layout--home.scss
+++ b/_src/sass/_layout--home.scss
@@ -255,7 +255,6 @@
 .prlx-bg {
 	background-attachment: fixed;
 	z-index: 20;
-	transform: translateZ(1.5px) scale(1.02);
 	overflow-x: hidden;
 	@media screen and #{$brk-wide} {
 		background-attachment: scroll;
