--- a/_src/sass/_layout--programs.scss
+++ b/_src/sass/_layout--programs.scss
@@ -60,6 +60,7 @@
 
 .programs-sub {
 	position: relative;
+	height: 100vh;
 }
 .programs {
 	overflow: auto;
